# bosch_brain

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
bosch_car/: Cargo.toml
bosch_car/src/: main.rs
bosch_car/src/serial/: camera.rs  sender.rs
bosch_car/src/server/: mod.rs  steering_wheel.rs  traffic_lights.rs  utils.rs
bosch_car/src/track/: mod.rs
brain/: Cargo.toml
brain/src/: broken_main.rs  main.rs  motor_manager.rs  serial.rs  udp_manager.rs
brain/src/http/: mod.rs  motor.rs  sensor.rs  states.rs  udp_manager.rs
brain/src/math/: circle.rs
brain/src/serial/: camera.rs  message.rs  mod.rs
brain/src/serial_old/: mod.rs  sender.rs
brain/src/server/: environment.rs  localisation.rs  moving_obstacle.rs  steering_wheel.rs  traffic_lights.rs
brain/src/tests/: mod.rs
brain/src/utils/: atomic_f64.rs  mod.rs
race_car/: Cargo.toml  package-lock.json  package.json
race_car/assets/css/: main.css
race_car/src/: files.rs  main.rs
race_car/src/frontend/: mod.rs
race_car/src/http/: control.rs  mod.rs  motor.rs  sensor.rs  states.rs  udp_broadcast.rs  udp_manager.rs
race_car/src/sensors/: ambience.rs  data.rs  distance.rs  gps.rs  imu.rs  manager.rs  mod.rs  motor_driver.rs  ultrasonic.rs  velocity.rs
race_car/templates/: base.html  sensors.html
res/tracks/: grapml_to_json_regex.txt  ntt_track.json  test_track.json
sensors/: Cargo.toml
sensors/src/: distance.rs  imu.rs  lib.rs  motor_driver.rs
shared/: Cargo.toml
shared/src/math/: circle.rs  kinematics.rs  mod.rs  pid.rs  segment.rs
src/: main.rs  new_brain.rs  state_machine.rs  tui.rs  udp_manager.rs
src/brain/: bno.rs  data.rs  mod.rs  pwm_driver.rs  ultrasonic.rs
src/http/: mod.rs
src/math/: almost_equals.rs  angle_wrap.rs  circle.rs  kinematics.rs  mod.rs  pid.rs  point.rs  segment.rs
src/sensors/: imu.rs  mod.rs
src/serial/: camera.rs  message.rs  mod.rs  sender.rs
src/server/: data.rs  environment.rs  localisation.rs  mod.rs  moving_obstacle.rs  steering_wheel.rs  traffic_lights.rs  utils.rs  vehicle_to_vehicle.rs
src/server/localisation/: data.rs  mod.rs  position_listener.rs  verify_data.rs
src/tests/: ackerman_circle.rs  mod.rs  track_following.rs  track_following_reloaded.rs
src/track/: data.rs  mod.rs  parsing.rs
