[package]
name = "bosch_brain"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true
lto = "thin"

[dependencies]
sensors = { path = "sensors" }
# Async
tokio = { version = "1", features = ["libc", "bytes", "fs", "io-std", "io-util", "macros", "rt-multi-thread", "sync", "net", "rt"] }
futures = "0.3"

# Logging
log = { version = "0.4", default-features = false, features = ["std", "serde", "max_level_debug", "release_max_level_warn"] }
env_logger = { version = "0.10", default-features = false, features = ["humantime", "color"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

# Serial port
serialport = { version = "4", default-features = false }
mio-serial = { version = "5", default-features = false }

rsa = "0.8"
digest = "0.10"
md-5 = "0.10"

ordered-float = "3"
hc-sr04 = "0.1.1"
linux-embedded-hal = "0.3.2"
pwm-pca9685 = "0.3.1"
anyhow = "1.0.75"
bno055 = "0.3.3"
htu2xd = "0.1.0"
