[workspace]
resolver = "2"
members = [
    "shared",
    "bosch_car",
    "race_car"
]

[workspace.dependencies]
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mint = { version = "0.5", features = ["serde"] }

[profile.dev.package."*"]
opt-level = 1

[profile.release]
incremental = true
lto = false
