[package]
name = "bosch_brain"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

# Async
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "net"] }
crossbeam-channel = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

# Serial port
serialport = { version = "4", default-features = false }
mio-serial = { version = "5", default-features = false }

rsa = "0.8"
digest = "0.10"
md-5 = "0.10"

ordered-float = "3"

anyhow = "1"
