[package]
name = "bosch_brain"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

# Async
tokio = { workspace = true }
crossbeam-channel = "0.5"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"

# Serial port
serialport = { version = "4", default-features = false }
mio-serial = { version = "5", default-features = false }

rsa = "0.8"
digest = "0.10"
md-5 = "0.10"

ordered-float = "3"

anyhow = { workspace = true }
