[package]
name = "race_car"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }

# Async
tokio = { workspace = true }
multiqueue2 = "0.1.7"

# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.4"

# Serial
serialport = { version = "4", default-features = false }

# Error handling
anyhow = { workspace = true }

# Utils
mint = { workspace = true }
chrono = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }

### Sensors
linux-embedded-hal = { version = "0.3", default-features = false, features = ["gpio_cdev"] }
# HC-SR04 Ultrasonic sensor
hc-sr04 = "0.1"
bno055 = { version = "0.3", features = ["std"] }
htu21df-sensor = { git = "https://gitlab.com/razvan.filea/htu21df-sensor", features = ["std"] }
pwm-pca9685 = "0.3"
